refining case study content

--- a/nih.html
+++ b/nih.html
@@ -89,7 +89,7 @@
         <p class="project-problem-statemnt">Although the site is home to a robust library of information, users reported difficulty in locating the information needed and were dissatisfied with the lack of through search functionality.</p>
 
         <h3 class="project-solution-headline">The solution</h3>
-        <p class="project-solution-statemnt">I thoroughly audited the content to uncover, usability bottlenecks and redesigned the entire site architecture to improved ease of navigation, prioritize search functionality, and provide a robust but more intuitive mega-navigation. I also prepared testing recommendations for a future stage of the project to further validate our design decisions. We were able to bring the user’s experience in line with the usability standards that are essential to providing a positive experience with a large body of content.</p>
+        <p class="project-solution-statemnt">I thoroughly audited the content to uncover usability bottlenecks and redesigned the entire site architecture to improved ease of navigation, prioritize search functionality, and provide a robust but more intuitive mega-navigation. I also prepared testing recommendations for a future stage of the project to further validate our design decisions. We were able to bring the user’s experience in line with the usability standards that are essential to providing a positive experience with a large body of content.</p>
         <div class="role-deliverable-tool-grid">
           <div class="role-list-group">
             <h3 class="role-headline">Role</h3>
@@ -135,7 +135,7 @@
     <section class="content-audit">
 
       <h2 class="content-audit-headline">Conducting the content audit</h2>
-      <p class="content-audit-introduction">I conducted a content audit with five goals in mind:</p>
+      <p class="content-audit-introduction">Before I could make recommendations for ways to improve the site's usability, I needed to understand the full breadth of the content. So I conducted a comprehensive content audit with five goals in mind:</p>
       <ul class="content-audit-objectives-list">
         <li><p>Determining the full breadth of content on the site</p></li>
         <li><p>Exposing any functional or performance challenges in existing page templates</p></li>
@@ -143,13 +143,13 @@
         <li><p>Preparing a comprehensive prototype and user testing considerations for a future stage</p></li>
         <li><p>Providing recommendations on a revised sitemap per content audit findings</p></li>
       </ul>
-      <p class="content-audit-intro-close">To get started, I generated an XML sitemap to gauge the breadth of the content. The XML sitemap revealed that <strong>over 6,000</strong> pages existed on the site.</p>
+      <p class="content-audit-intro-close">As a first step, I generated an XML sitemap to list all of the accessible URLs associated with the domain. The XML sitemap revealed that <strong>over 6,000</strong> pages existed on the site.</p>
       <h4 class="xml-sitemap-headline">The XML Sitemap</h4>
       <figure class="xml-sitemap">
         <img class= "xml-sitemap-image" src="images/NIH/xml-sitemap.png" alt="NIH XML Sitemap"></img>
         <figcaption> The XML Sitemap</figcaption>
       </figure>
-      <p class="excel-content-intro">After gauging the breadth of the content, I used this information to create an excel-based content audit.  I used the navigation structure as a guide for how to group the content, creating tabs in the excel workbook for each navigation subgroup.  Orphan pages, not clearly linked to the navigation are grouped and presented alongside pages of the same template or type. For all content I collected information including page title, URL, primary and sub-navigation, content type (i.e.: PDF, video) an recommendations and notes.</p>
+      <p class="excel-content-intro">After gauging the breadth of the content, I used this information to create an excel-based content audit.  I used the navigation structure as a guide for how to group the content, creating tabs in the excel workbook for each navigation subgroup.  Orphan pages, not clearly linked to the navigation are grouped and presented alongside pages of the same template or type. For all content I collected information including page title, URL, primary and sub-navigation, content type (i.e.: PDF, video) and recommendations and notes. Additional page type specific details, such as a product's features, or launch date are captured as well.</p>
 
       <figure class="content-snapshot">
         <img class= "content-snapshot-image" src="images/NIH/content-snapshot.png" alt="NIH Content Snapshot"></img>
@@ -168,7 +168,7 @@
         <li><p>News: 48 news & event articles highlight updates from OTT</p></li>
       </ul>
 
-      <p class="content-audit-closing">I studied the content for inefficiencies and bottlenecks that might stand between user needs and the offices core goal of facilitating access to research data, licensing and partnership opportunities and presented the findings and recommendations.</p>
+      <p class="content-audit-closing">I studied the content for inefficiencies and bottlenecks that might stand between user needs and the organization's core goal of facilitating access to research data, licensing and partnership opportunities and presented the findings and recommendations.</p>
 
 
     </section>
@@ -185,8 +185,8 @@
         <li><p>Sitewide navigation components</p></li>
       </ul>
 
-      <h3 class="detailed-findings-headline">Detailed findings</h2>
-      <p class="detailed-findings-intro">Taking a close look at the data provided a greater understanding of the content. There were noted observation about the content distribution, content types and overall ease of access. </p>
+      <h3 class="detailed-findings-headline">Seeing the bigger icture</h2>
+      <p class="detailed-findings-intro">At this stage, I had a clear picture of what content the site included, so I was able to take a step back to see the bigger picture and make some actionable inferences. There were notable observation about the content distribution, content types and overall ease of access. </p>
 
       <h4 class="navigation-content-headline"> Navigation Content Distribution:  About OTT & Reports/Stats sections have the most navigational touchpoints.</h4>
       <figure class="navigation-content-findings">
@@ -208,8 +208,8 @@
         <p class="page-findings-recommendation"><strong>Recommendation</strong>: Update the technology abstract template to improve readability</p>
       </figure>
 
-      <h4 class="reviewing-abstracts-headline">How I reviewed technology abstracts & challenges encountered</h4>
-      <p class ="reviewing-abstracts-intro">With over 1,500 technology abstracts comprising more than 25% of pages on the site, its important to ensure that the abstacts are inuitively designed, functionally effective, accessible for all types of users and easy to navigate. An analysis of one of the abstracts reveals deficiencies that we will need to address:</p>
+      <h4 class="reviewing-abstracts-headline">Technology abstract content doesnt accurately match searchable filters</h4>
+      <p class ="reviewing-abstracts-intro">With over 1,500 technology abstracts comprising more than 25% of pages on the site, its important to ensure that the abstacts are inuitively designed, functionally effective, accessible for all types of users and easy to navigate. An analysis the abstracts revealed that the content on the abstracts is not aligned with the filters used in the search component. Additionally, where the searchable information is present in the abstracts, its poorly labeled and difficult to ascertain.</p>
       <ul class= reviewing-abstracts-list>
         <li><p>Fixed-list search filters: include disease area, application, development stage, technology, institute/center, seeking collaboration</p></li>
         <li><p>Disease area: (infectious disease (viral)) inferred from headline</p></li>
