refining case study content

--- a/nih.html
+++ b/nih.html
@@ -185,7 +185,7 @@
         <li><p>Sitewide navigation components</p></li>
       </ul>
 
-      <h3 class="detailed-findings-headline">Seeing the bigger icture</h2>
+      <h3 class="detailed-findings-headline">Seeing the bigger picture</h2>
       <p class="detailed-findings-intro">At this stage, I had a clear picture of what content the site included, so I was able to take a step back to see the bigger picture and make some actionable inferences. There were notable observation about the content distribution, content types and overall ease of access. </p>
 
       <h4 class="navigation-content-headline"> Navigation Content Distribution:  About OTT & Reports/Stats sections have the most navigational touchpoints.</h4>
