refining case study images

--- a/nih.html
+++ b/nih.html
@@ -585,7 +585,7 @@
     </section>
 
     <section class="interactive-prototype">
-      <h2 class="interactive-prototype-headline">Evaluating the design in an interactive prorotype</h2>
+      <h2 class="interactive-prototype-headline">Evaluating the design in an interactive prototype</h2>
       <p class="interactive-prototype-intro">At this stage in the project we’ve achieved some important progress toward our initial objectives, but creating a prototype brought us one step closer to evaluating the success of our proposed design:</p>
       <p class="problems-solved-list-headline">Our design has this far solved several problems:</p>
       <ul class="problems-solved-list">
