refining case study images

--- a/nih.html
+++ b/nih.html
@@ -468,7 +468,7 @@
 
       <h5 class="revised-sitemap-headline">The revised sitemap</h5>
       <figure class="revised-sitemap">
-        <img class="current-sitemap-image" src="images/NIH/revised-sitemap.jpeg" alt="page distribution findings"></img>
+        <img class="revised-sitemap-image" src="images/NIH/revised-sitemap.jpeg" alt="page distribution findings"></img>
         <figcaption>Revised sitemapt</figcaption>
       </figure>
 
