refining case study images and content

--- a/nih.html
+++ b/nih.html
@@ -496,10 +496,6 @@
         <figcaption>Global navigation wireframe</figcaption>
       </figure>
 
-      <figure class="global-footer-wire">
-        <img class="global-footer-wire-image" src="images/NIH/global-footer-wireframe.png" alt="page distribution findings"></img>
-        <figcaption>Global footer wireframe</figcaption>
-      </figure>
 
       <p class="search-results-wire-list-headline">Considerations for the search results page wireframe included:</p>
       <ul class="search-results-wire-list">
@@ -556,7 +552,7 @@
         <figcaption>Contact wireframe</figcaption>
       </figure>
 
-      <p class="login-wire-list-headline">Considerations for the login wireframe included:</p>
+      <p class="login-wire-list-headline">Considerations for the login and signup wireframe included:</p>
       <ul class="login-wire-list">
         <li><p>Reduce barriers to entry for users to login</p></li>
         <li><p>Keep forms short and intuitive</p></li>
@@ -565,17 +561,6 @@
       <figure class="login-wire">
         <img class="login-wire-image" src="images/NIH/login-wireframe.png" alt="page distribution findings"></img>
         <figcaption>Login wireframe</figcaption>
-      </figure>
-
-      <p class="signup-wire-list-headline">Considerations for the signup wireframe included:</p>
-      <ul class="signup-wire-list">
-        <li><p>Reduce barriers to user enrollment</p></li>
-        <li><p>Keep forms short and intuitive</p></li>
-        <li><p>Ensure design is responsive</p></li>
-      </ul>
-      <figure class="signup-wire">
-        <img class="signup-wire-image" src="images/NIH/signup-wireframe.png" alt="page distribution findings"></img>
-        <figcaption>Signup wireframe</figcaption>
       </figure>
 
       <button onclick="window.location.href='documents/nih_ott_wireframes.pdf' "target="_blank"> Explore all of the wireframes </button>
