updating prototype link

--- a/nih.html
+++ b/nih.html
@@ -629,7 +629,7 @@
         <li><p>View an abstract and identify key attributes and how to contact a representative for more information (Live Attenuated Vaccine to Prevent Disease Caused by West Nile Virus)</p></li>
       </ul>
 
-      <button onclick="window.location.href = 'contact-2.0.html';">Explore the prototype</button>
+      <button onclick="window.location.href = 'https://invis.io/XVY7SVAE854';">Explore the prototype</button>
 
     </section>
 
