Refining NIH case study wireframe narrative details

--- a/nih.html
+++ b/nih.html
@@ -486,10 +486,14 @@
         <li><p>Designing a user friendly and intuitive page infrastructure</p></li>
         <li><p>Ensure design is responsive</p></li>
       </ul>
+
+      <p class="homepage-wire-notes"> My recommendation for the homepage featured a hero section technology search with recommended search terms, a drop down content summary & evolving search term recommendations based on characters entered. Cards showing available technology, featured content callouts and a news section are included to ensure that users have quick access to the most pertinent information and are quickly moved through their journey while actively engaged.</br></br> Globally, a primary and utility navigation, footer and cookie notification alert banner provide consistent naviagtion and notification throughout the site. The recommended primary navigation included a dropdown menu with content description, sub-links and callout. </p>
+
       <figure class="homepage-wire">
-        <img class="homepage-wire-image" src="images/NIH/homepage-wireframe2.png" alt="page distribution findings"></img>
+        <img class="homepage-wire-image" src="images/NIH/homepage-wireframe.png" alt="page distribution findings"></img>
         <figcaption>Homepage wireframe</figcaption>
       </figure>
+
 
       <figure class="global-navigation-wire">
         <img class="global-navigation-wire-image" src="images/NIH/global-navigation-wireframe.png" alt="page distribution findings"></img>
@@ -503,6 +507,9 @@
         <li><p>Allow users to easily bookmark content</p></li>
         <li><p>Ensure design is responsive</p></li>
       </ul>
+
+      <p class="search-results-wire-notes"> I prepared two recommendations for the global sitewide search results page which are functionally similar but present different placement for the search filters. Each option includes global page breadcrumbs and a text search input which shows users the term recently searched, recommends a search term if they’ve misspelled a recognized term and allows them to save the search to their bookmarks. The technology abstract most closely associated with the current query  is presented at top and all results are able to be user-bookmarked. Pagination minimizes the liklihood of overwhelming the user and results can be sorted by various properties, including relevance to the query. </p>
+
       <figure class="search-results-wire">
         <img class="search-results-wire-image" src="images/NIH/search-results-wireframe.png" alt="page distribution findings"></img>
         <figcaption>Search results wireframe</figcaption>
@@ -514,28 +521,38 @@
         <li><p>Encourage user conversion from the abstract page</p></li>
         <li><p>Ensure design is responsive</p></li>
       </ul>
+
+      <p class="abstract-wire-notes">Redesigning the technology abstract was a really easy to identify barrier between interested parties and lisencing. If a user can't understand the technology, there's almost chance they can perceive opportunity to use it. So my recommendation centered on that. Iconography to help users quickly decifier techology type, the option to bookmark content for later viewing, and prioritization of our key call to action to "request more information" are all used to make the content more accessible and support the organization's objective. Additionally, lower priority information, such as patents, publications and related technologies are cleanly and accessibly displayed, but are located below the fold to preserve the valuable visual real estate that the user will see upon first arrival to the page.</p>
+
       <figure class="abstract-wire">
         <img class="abstract-wire-image" src="images/NIH/abstract-wireframe.png" alt="page distribution findings"></img>
         <figcaption>Abstract wireframe</figcaption>
       </figure>
 
-      <p class="technology-index-wire-list-headline">Considerations for the homepage wires included:</p>
+      <p class="technology-index-wire-list-headline">Considerations for the technology index wires included:</p>
       <ul class="technology-index-wire-list">
         <li><p>Provide an easy to scan and filter index of technologies</p></li>
         <li><p>Allow users to easily bookmark content</p></li>
         <li><p>Ensure design is responsive</p></li>
       </ul>
+
+      <p class="technology-index-wire-notes"> The recommendation for the list indexing all technology abstracts on the site s very visually similar to that for sitewide search results, but only includes lists technology abstracts. With the focus here being solely on abstracts, the filtering capability here is much more detailed and specfic to the data tagged to technology abstracts. complex filters for disease type, institute and technology type are among some of the abstract specific filters that users will find here.</p>
+
       <figure class="technology-index">
         <img class="technology-index-wire-image" src="images/NIH/technology-index-wireframe.png" alt="page distribution findings"></img>
         <figcaption>Technology index wireframe</figcaption>
       </figure>
 
-      <p class="user-dashboard-wire-list-headline">Considerations for the user dashbaord wireframe included:</p>
+      <p class="user-dashboard-wire-list-headline">Considerations for the user dashboard wireframe included:</p>
+
       <ul class="user-dashboard-wire-list">
         <li><p>Prepare for account and cookies-based users</p></li>
         <li><p>Allow users to save content for later consumption</p></li>
         <li><p>Provide a reference for browsing history</p></li>
       </ul>
+
+      <p class="user-dashboard-wire-notes"> We achieved this by</p>
+
       <figure class="user-dashboard-wire">
         <img class="user-dashboard-wire-image" src="images/NIH/user-dashboard-wireframe.png" alt="page distribution findings"></img>
         <figcaption>User dashboard wireframe</figcaption>
@@ -547,6 +564,9 @@
         <li><p>Protect user privacy</p></li>
         <li><p>Ensure design is responsive</p></li>
       </ul>
+
+      <p class="contact-wire-notes"> We achieved this by</p>
+
       <figure class="contact-wire">
         <img class="contact-wire-image" src="images/NIH/contact-wireframe.png" alt="page distribution findings"></img>
         <figcaption>Contact wireframe</figcaption>
@@ -558,6 +578,9 @@
         <li><p>Keep forms short and intuitive</p></li>
         <li><p>Ensure design is responsive</p></li>
       </ul>
+
+      <p class="login-wire-notes"> We achieved this by</p>
+
       <figure class="login-wire">
         <img class="login-wire-image" src="images/NIH/login-wireframe.png" alt="page distribution findings"></img>
         <figcaption>Login wireframe</figcaption>
