--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <section class="about">
       <h2 class=about-headline>About me</h2>
-      <p class="about-copy">Hi, I’m Jessica Blanchard, lead UX designer, design mentor and educator. I’m passionate about accessible solutions that drive conversions. My experience spans healthcare, finance, non-profit, goverment, and self care in responsive web and mobile applications.</p>
+      <p class="about-copy">Hi, I’m Jessica Blanchard, lead UX designer, design mentor and educator. I’m excited to design accessible solutions that drive conversions. My experience spans healthcare, finance, non-profit, goverment, and self care in responsive web and mobile applications.</p>
       <button onclick="window.location.href = 'about-2.0.html';">Read more</button>
     </section>
 
