Revised NIH case study copy

--- a/nih.html
+++ b/nih.html
@@ -233,7 +233,7 @@
       </figure>
 
       <h4 class="reviewing-inventory-pages-headline"><strong>37%</strong> of inventor inventory pages are currently not returning results.</h4>
-      <p class="reviewing-inventory-pages-intro">Inventor inventory pages are used to list all abstracts associated with an individual inventor. Over 3,000 such pages exist on the site, comprising over 50% of the site pages. Disovering that 37% of these pages lead to broken links presents a significant problem. Encountering these links is not only poor for the user's immediate exerience, but also creates a poorly structured site with potential impacts to SEO, and accessibility.</p>
+      <p class="reviewing-inventory-pages-intro">Inventor inventory pages are used to list all abstracts associated with an individual inventor. Over 3,000 such pages exist on the site, comprising over 50% of the site pages. Discovering that 37% of these pages lead to broken links presents a significant problem. Encountering these links is not only poor for the user's immediate exerience, but also creates a poorly structured site with potential impacts to SEO, and accessibility.</p>
       <ul class="reviewing-inventory-pages-list">
         <li><p>Technology abstract links to more inventions by inventor</p></li>
         <li><p>Inventor’s inventory breadcrumbs include link to current page(3) and “NIH Opportunities from Inventor” (4)</p></li>
@@ -510,7 +510,7 @@
         <li><p>Ensuring the design is responsive</p></li>
       </ul>
 
-      <p class="abstract-wire-notes">Redesigning the technology abstract was a really easy to identify barrier between interested parties and lisencing. If a user can't understand the technology, there's almost chance they can perceive opportunity to use it. So my recommendation centered on that. Iconography to help users quickly decifier techology type, the option to bookmark content for later viewing, and prioritization of our key call to action to "request more information" are all used to make the content more accessible and support the organization's objective. Additionally, lower priority information, such as patents, publications and related technologies are cleanly and accessibly displayed, but are located below the fold to preserve the valuable visual real estate that the user will see upon first arrival to the page.</p>
+      <p class="abstract-wire-notes">Redesigning the technology abstract was a really easy to identify barrier between interested parties and lisencing. If a user can't understand the technology, there's almost no chance they can perceive opportunity to use it. So my recommendation centered on that. Iconography to help users quickly decifier techology type, the option to bookmark content for later viewing, and prioritization of our key call to action to "request more information" are all used to make the content more accessible and support the organization's objective. Additionally, lower priority information, such as patents, publications and related technologies are cleanly and accessibly displayed, but are located below the fold to preserve the valuable visual real estate that the user will see upon first arrival to the page.</p>
 
       <figure class="abstract-wire">
         <img class="abstract-wire-image" src="images/NIH/abstract-wireframe.png" alt="page distribution findings"></img>
@@ -524,7 +524,7 @@
         <li><p>Ensuring the design is responsive</p></li>
       </ul>
 
-      <p class="technology-index-wire-notes"> The recommendation for the list indexing all technology abstracts on the site is very visually similar to that for sitewide search results, but only includes lists technology abstracts. With the focus here being solely on abstracts, the filtering capability here is much more detailed and specfic to the data tagged to technology abstracts. complex filters for disease type, institute and technology type are among some of the abstract specific filters that users will find here.</p>
+      <p class="technology-index-wire-notes"> The recommendation for the list indexing all technology abstracts on the site is very visually similar to that for sitewide search results, but only includes a listing of technology abstracts. With the focus here being solely on abstracts, the filtering capability here is much more detailed and specfic to the data tagged to technology abstracts. complex filters for disease type, institute and technology type are among some of the abstract specific filters that users will find here.</p>
 
       <figure class="technology-index">
         <img class="technology-index-wire-image" src="images/NIH/technology-index-wireframe.png" alt="page distribution findings"></img>
@@ -550,7 +550,7 @@
       <ul class="contact-wire-list">
         <li><p>Reducing steps for user to contact NIH OTT</p></li>
         <li><p>Protecting user privacy</p></li>
-        <li><p>Ensure the design is responsive</p></li>
+        <li><p>Ensuring the design is responsive</p></li>
       </ul>
 
       <p class="contact-wire-notes"> The recommended structure of the contact form is simple, keeping form fields to a minimum, labeling them clearly and providing clear inline error messaging. Inputs include an optional name text input field, email address text input field, subject dropdown, and a free form text input field. By default users will receive a copy of their message for reference, but they can opt out. A callout component allows for a flexible location to highlight key content and provide a logical next step for users who have submitted the form. </p>
@@ -564,10 +564,10 @@
       <ul class="login-wire-list">
         <li><p>Reducing barriers to entry for users to login</p></li>
         <li><p>Keeping forms short and intuitive</p></li>
-        <li><p>Ensuring design is responsive</p></li>
+        <li><p>Ensuring the design is responsive</p></li>
       </ul>
 
-      <p class="login-wire-notes"> My recommendation included a tabbed component that allows users to toggle between logging in and signing up. Users are proivided the option to login with site specific credentials or with login.gov account</p>
+      <p class="login-wire-notes"> My recommendation included a tabbed component that allows users to toggle between logging in and signing up. Users are provided the option to login with site specific credentials or with login.gov account</p>
 
       <figure class="login-wire">
         <img class="login-wire-image" src="images/NIH/login-wireframe.png" alt="page distribution findings"></img>
@@ -595,26 +595,13 @@
       </ul>
       <p class="creative-design-intro">I shared the Sketch file with a creative designer, who began incorporating brand colors, typography and iconography and I assembled those work in progress designs into an inVision prototype.</p>
 
-      <p class="prototype-is-headline">The prototype was intended to:</p>
+      <p class="prototype-is-headline">While not intended to represent the final look and feel, the prototype allowed us to:</p>
       <ul class="prototype-is-list">
         <li><p>Link together static wireframes</p></li>
-        <li><p>be a useful activity at all stages of wireframing, but is best done early</p></li>
-        <li><p>Help validate or disprove design decisions</p></li>
-        <li><p>Allow for user testers to provide feedback</p></li>
+        <li><p>Pressure test design decisions </p></li>
+        <li><p>Create an environment for user testers to provide feedback</p></li>
       </ul>
 
-      <p class="prototype-is-not-list-headline">The prototype was not necessarily intended to:</p>
-      <ul class="prototype-is-not-list">
-        <li><p>A presentation of final look & feel</p></li>
-        <li><p>Going to validate your expectations</p></li>
-      </ul>
-
-      <p class="why-prototype-list-headline">I underwent this exercise to:</p>
-      <ul class="why-prototype-list">
-        <li><p>Further opportunity to pressure test wireframes</p></li>
-        <li><p>Explore how wireframes relate to one another</p></li>
-        <li><p>Create sharable asset for stakeholder and user testing</p></li>
-      </ul>
 
       <h3 class="prototype-flows-headline">The prototype is designed to demonstrate eight key task flows</h3>
       <ul class="prototype-flows-list">
@@ -717,7 +704,7 @@
 
     <section class="key-takeaways">
       <h2 class="key-takeaways-headline">Key takeaways</h2>
-      <p class="key-takeaways-intro">Projects involving large libraries of content have the potential to result in an inconsistent user experience. Individual sections of the site can take on a life of their own and seemingly evolve over time to operate under a different set of usability expectations than other parts of the site. However, developing a thorough understanding of the content and applying a consistent set of heuristic guidelines allows us to create an enviroment of minimal resistance, despite the massive volume of content involved. A content audit allowed us to identify hidden inefficiencies and sucessfully launch this large scale redesign.</p>
+      <p class="key-takeaways-intro">Projects involving large libraries of content have the potential to result in an inconsistent user experience. Individual sections of the site can take on a life of their own, evolving away from user-centered and forgoing best practices, creating inconsistency and an overall unpleasant user experience.</br></br> A thorough content audit was essential step to reveal hidden inefficiencies that we were able to resolve, ensuring that the site infrastructure will continue to make it easy for users to successfully find and lisence technology.  </p>
     </section>
 
     <footer class="footer">
