--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -167,7 +167,7 @@
         <img class="phase-1-full-layout-image" src="images/phase-1-full-layout.png" alt="Floodlight MS Phase-1 Full Layout"></img>
         <figcaption> Full site layout prepared by the phase one team</figcaption>
       </figure>
-      <h4 class="updating-phase-1-headline">Updates to phase one in parallel with work on Phase two</h4>
+      <h4 class="updating-phase-1-headline">Updates to phase one in parallel with work on phase two</h4>
       <p class="updating-phase-1">The team beginning work on phase two of the site was asked to streamline the live microsite in parallel with the design of the full site, highlighting the key function of allowing healthcare providers who have already adopted the tool, to access the provider portal,  eliminating the patient directed content and removing the contact form. </p>
       <h4 class="phase-1-image-headline">Final adjustments to the phase one microsite</h4>
       <figure class="phase-1-update">
