Adjusted max-width

--- a/intentpartners-2.0.html
+++ b/intentpartners-2.0.html
@@ -157,7 +157,7 @@
 
 
 
-        <div class="discovery-section1">
+        <section class="discovery-section1">
             <h2>Discovery & Research</h2>
 
             <div class="intent-user-survey">
@@ -199,20 +199,20 @@
 
 
 
-            </div>
+            </section>
 
             <div class="user-personas">
                 <h3>User Personas</h3>
                 <p>Personas were constructed to summarize and represent the user research data. </p>
             </div>
           </div>
-        <div class="intent-discovery-section2">
+        <section class="intent-discovery-section2">
           <img class="molly" src="intent_partners_images/user_personas/Group 7.svg" alt="Persona 1">
           <img class="angelica" src="intent_partners_images/user_personas/Group 7.2.svg" alt="Persona 2">
           <img class="angelica" src="intent_partners_images/user_personas/Group 7.1.svg" alt="Persona 3">
 
-        </div>
-        <div class="discovery-section3">
+        </section>
+        <section class="discovery-section3">
             <div class="competitive-analysis">
                 <h3>Competitive Analysis</h3>
                 <p>Impactual,  Do Something Strategic,  and Bridgespan Group are three consultancies that take a unique apporoch to advising their clients on developing powerful  social impact initiatives. Impactual touts it focus on real impact over optics, Do Something Strategic provides unique access to proprietary data on the Gen Z and millennial audience, and veteran leader, Bridgespan Group advises change-making organizations and investors.</br></br>While they all use story telling to demonstrate their individual acumen, none tackle the needs expressed by users, such as providing a transparent tool for consumers to identify real-impact focused businesses, proprietary opportunity discovery and  impact managing tools, and resources to activate the corporate workforce as impact evangelists. </p>
@@ -363,7 +363,7 @@
                 </table> -->
 
             </div>
-          </div>
+          </section>
 
         <section class="information-architecture-indented1">
           <h2> Information architecture</h2>
